@@ -2817,3 +2817,6 @@
 	  packets.  It was not using the maximum request size, but instead the previous
 	  request size.  As a result, packets get smaller, and smaller, and ...  This
 	  is an important USB serial fix.
+	* arch/arc/src/stm32_otgfsdev.c: Bug fix: Don't process TXFE if we have
+	  already processed an XFRC interrupt.  We have already done what needs
+	  to done in that case.
